[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/EnemyHitbox.gd" type="Script" id=1]

[node name="EnemyHitbox" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_EnemyHitbox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EnemyHitbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
